<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".AddGradesFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="32dp"
        android:background="?android:windowBackground"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/userManagement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addNewGrade"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@id/userManagement"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chooseStudent"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="12dp"/>

                <Spinner
                    android:id="@+id/studentsSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"/>

                <TextView
                    android:id="@+id/subjectNameTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Przedmiot:"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chooseGrade"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="12dp"/>

                <Spinner
                    android:id="@+id/gradesSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Typ oceny"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="12dp"/>

                <EditText
                    android:id="@+id/typeEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="np. Sprawdzian, Kartkówka"
                    android:inputType="text"
                    android:layout_marginBottom="24dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/addDescription"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="12dp"/>

                <EditText
                    android:id="@+id/editTextTextMultiLine"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:gravity="start|top"
                    android:inputType="textMultiLine"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/addGradeButton"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="32dp"
                    android:background="@drawable/background_button_light"
                    android:textColor="#fff"
                    android:text="@string/saveUserButton"
                    android:textStyle="bold"/>

            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
