<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".SpecificGradeViewFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="32dp"
        android:background="?android:windowBackground"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/gradeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gradeText"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            tools:ignore="MissingConstraints"/>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/gradeText">

            <FrameLayout
                android:layout_width="150dp"
                android:layout_height="150dp">

                <ImageButton
                    android:id="@+id/gradeImageButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/background_specific_grade"/>

                <TextView
                    android:id="@+id/grade"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="5"
                    android:textAlignment="center"
                    android:textColor="@color/light_blue"
                    android:textSize="56sp"
                    android:textStyle="bold"/>
            </FrameLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/gradeCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/gradeCategory"
            android:textSize="32sp"
            android:textColor="@color/light_blue"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/linearLayout2"
            app:layout_constraintTop_toBottomOf="@id/linearLayout2"/>

        <TextView
            android:id="@+id/gradeTeacher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/gradeTeacher"
            android:textSize="16sp"
            android:textColor="@color/light_blue"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/gradeCategory"
            app:layout_constraintTop_toBottomOf="@id/gradeCategory"/>

        <TextView
            android:id="@+id/gradeType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="Typ oceny"
            android:textSize="14sp"
            android:textColor="@color/light_blue"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="@id/gradeTeacher"
            app:layout_constraintTop_toBottomOf="@id/gradeTeacher"/>

        <TextView
            android:id="@+id/gradeDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/gradeDate"
            android:textSize="14sp"
            android:textColor="@color/light_blue"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="@id/gradeType"
            app:layout_constraintTop_toBottomOf="@id/gradeType"/>

        <TextView
            android:id="@+id/gradeDescriptionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/gradeDescriptionText"
            android:textSize="16sp"
            android:textColor="@color/light_blue"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/gradeDate"
            app:layout_constraintTop_toBottomOf="@id/gradeDate"/>

        <TextView
            android:id="@+id/gradeDescription"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:text="@string/gradeDescription"
            android:textColor="@color/light_blue"
            android:textSize="14sp"
            android:textStyle="normal"
            app:layout_constraintTop_toBottomOf="@id/gradeDescriptionText"
            app:layout_constraintStart_toStartOf="@id/gradeDescriptionText"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
