...
    <string name="gradeDate">Data</string>
    <string name="gradeDescriptionText">Opis</string>
    <string name="gradeDescription">Pole opisowe</string>

<!--fragment_select_group_grades.xml-->
    <string name="chooseGroup">Wybierz klasę</string>
    <string name="groupName">Klasa 1</string>

<!--fragment_look_through_users.xml-->
    <string name="lookForUser">Wyszukaj użytkownika</string>
    <string name="role">Rola</string>
    <string name="group">Grupa</string>
    <string name="userName">Imię nazwisko</string>
...

<!--fragment_group_grades-->
    <string name="groupGrades">Oceny grupy</string>
    <string name="studentsName">Imię nazwisko</string>

<!--fragment_grades-->
    <string name="yourGrades">Twoje oceny</string>
    <string name="addNewGrade">Dodaj ocenę</string>
    <string name="homeBrowseGrades">Przeglądaj oceny</string>

<!--fragment_edit_user-->
    <string name="editUser">Edytuj użytkownika</string>
    <string name="name">Imię</string>
...
