<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GradesFragment"
    android:background="#000000">

    <androidx.constraintlayout.widget.ConstraintLayout
...
        android:padding="32dp"
        android:background="?android:windowBackground"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/yourGrades"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yourGrades"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
...
