<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/home"
        android:title=""
        android:icon="@drawable/baseline_home_24"/>

    <item android:id="@+id/grades"
        android:title=""
        android:icon="@drawable/baseline_grade_24"/>

    <item android:id="@+id/settings"
        android:title=""
        android:icon="@drawable/baseline_settings_24"/>
</menu>