...
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginBottom="10dp">

                <ImageButton
                    android:id="@+id/gradesButton"
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:scaleType="fitCenter"
                    android:src="@drawable/red_button_background" />
...
